--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -26,7 +26,7 @@
                 </form>
                 <div class="text-center mt-4">
                     <span class="text-muted">Already have an account?</span>
-                    <a href="{% url 'login' %}" class="text-decoration-none fw-semibold" style="color: var(--santa-red);"> Login</a>
+                    <a href="{% url 'accounts:login' %}" class="text-decoration-none fw-semibold" style="color: var(--santa-red);"> Login</a>
                 </div>
             </div>
         </div>
