--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
             <a href="{% url 'accounts:signup' %}" class="btn btn-santa btn-lg me-3 mb-2">
                 <i class="fas fa-rocket me-2"></i>Get Started Free
             </a>
-            <a href="{% url 'login' %}" class="btn btn-outline-light btn-lg mb-2">
+            <a href="{% url 'accounts:login' %}" class="btn btn-outline-light btn-lg mb-2">
                 Already have an account?
             </a>
         </div>
